[tool.poetry]
name = "cipher_pvp2108"
version = "0.1.0"
description = "Package for homework mds2020"
authors = ["Pooja <pvp2108@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
